--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -273,7 +273,7 @@
                                     <a class="node" href="https://www.seattletimes.com/business/bitcoin-backlash-as-miners-suck-up-electricity-stress-power-grids-in-central-washington/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 03:21:09 &nbsp;•&nbsp;
-                                    232 comments &nbsp;•&nbsp;
+                                    233 comments &nbsp;•&nbsp;
                                     220.0 points
                                 </span>
                             </td>
@@ -393,7 +393,7 @@
                                     <a class="node" href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 05:18:04 &nbsp;•&nbsp;
-                                    99 comments &nbsp;•&nbsp;
+                                    100 comments &nbsp;•&nbsp;
                                     183.0 points
                                 </span>
                             </td>
@@ -506,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
+                                    102 comments &nbsp;•&nbsp;
+                                    164.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17163194">Modern CMake short tutorial and best practice</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -535,26 +555,6 @@
                                     2018-05-25 09:22:29 &nbsp;•&nbsp;
                                     130 comments &nbsp;•&nbsp;
                                     161.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17154797">Apple's 7nm A12 chip could be the best feature in the 2018 iPhones</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.macworld.com/article/3275567/iphone-ipad/apple-7nm-a12-chip-iphone.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 15:46:04 &nbsp;•&nbsp;
-                                    180 comments &nbsp;•&nbsp;
-                                    160.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 02:30:03.612762</strong>
+            <strong>Last update at 2018-05-28 02:40:03.763347</strong>
         </div>
     </div>
 </div>
