--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -326,6 +326,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170195">Why Your Health Insurer Doesn’t Care About Your Big Bills</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.propublica.org/article/why-your-health-insurer-does-not-care-about-your-big-bills">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=joveian">joveian</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:57:38 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    5.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169847">How I priced my side-project. The pricing story of Cronhub</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -486,15 +506,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165200">Remembering Alan Bean</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170114">Browsing porn in incognito mode isn't nearly as private as you think</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.nasa.gov/feature/alan-bean">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=sohkamyung">sohkamyung</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 02:40:35 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    5.0 points
+                                    <a class="node" href="https://www.theguardian.com/commentisfree/2018/may/27/incognito-mode-what-does-it-mean-history-google-chrome-privacy-settings">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:25:07 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
+                                    4.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,26 +553,6 @@
                                     <a class="node" href="https://github.com/Halfeld/slidefy">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=halfeld">halfeld</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:10:30 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    4.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168793">Airstore: The cloud storage for your physical items</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.airstore.xyz">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=hermanite">hermanite</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 19:52:48 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 02:40:03.763347</strong>
+            <strong>Last update at 2018-05-28 02:50:02.908593</strong>
         </div>
     </div>
 </div>
