--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -186,6 +186,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 14:47:36 &nbsp;•&nbsp;
+                                    10 comments &nbsp;•&nbsp;
+                                    93.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17162887">Mozilla to remove “meritocracy” from governance docs because it's “problematic”</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -226,14 +246,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
+                                    <a href="https://news.ycombinator.com/item?id=17165979">What really happened to that melted NASA camera?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 14:47:36 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.nasa.gov/feature/what-really-happened-to-that-melted-nasa-camera">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ColinWright">ColinWright</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 07:58:31 &nbsp;•&nbsp;
+                                    17 comments &nbsp;•&nbsp;
                                     88.0 points
                                 </span>
                             </td>
@@ -275,26 +295,6 @@
                                     2018-05-25 10:50:19 &nbsp;•&nbsp;
                                     55 comments &nbsp;•&nbsp;
                                     88.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165979">What really happened to that melted NASA camera?</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.nasa.gov/feature/what-really-happened-to-that-melted-nasa-camera">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ColinWright">ColinWright</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 07:58:31 &nbsp;•&nbsp;
-                                    17 comments &nbsp;•&nbsp;
-                                    87.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=hooloovoo_zoo">hooloovoo_zoo</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 21:13:13 &nbsp;•&nbsp;
                                     49 comments &nbsp;•&nbsp;
-                                    76.0 points
+                                    77.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17161886">On the Detection of Kernel-Level Rootkits Using Hardware Performance Counters [pdf]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169080">Top Mistakes and Learnings from My Startup: Postmortem Samsamia</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.cs.binghamton.edu/~devtyushkin/asiaccs-2017.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 13:26:51 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://miguelgfierro.com/blog/2018/top-mistakes-and-learnings-from-my-startup-postmortem-samsamia/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 21:00:55 &nbsp;•&nbsp;
+                                    36 comments &nbsp;•&nbsp;
                                     73.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161886">On the Detection of Kernel-Level Rootkits Using Hardware Performance Counters [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
-                                    42 comments &nbsp;•&nbsp;
-                                    72.0 points
+                                    <a class="node" href="http://www.cs.binghamton.edu/~devtyushkin/asiaccs-2017.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 13:26:51 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
+                                    73.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 03:40:03.021568</strong>
+            <strong>Last update at 2018-05-28 03:50:03.095318</strong>
         </div>
     </div>
 </div>
