--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -174,27 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=togelius">togelius</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 23:50:10 &nbsp;•&nbsp;
                                     17 comments &nbsp;•&nbsp;
-                                    30.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170195">Why Your Health Insurer Doesn’t Care About Your Big Bills</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.propublica.org/article/why-your-health-insurer-does-not-care-about-your-big-bills">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=joveian">joveian</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 01:57:38 &nbsp;•&nbsp;
-                                    6 comments &nbsp;•&nbsp;
-                                    28.0 points
+                                    31.0 points
                                 </span>
                             </td>
                         </tr>
@@ -214,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:44:53 &nbsp;•&nbsp;
                                     4 comments &nbsp;•&nbsp;
-                                    28.0 points
+                                    31.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17168380">Just Kills: How the Marine Corps Blew the Biggest War Crimes Case Since Vietnam</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://taskandpurpose.com/true-story-marine-corps-blew-biggest-war-crimes-case/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Pinckney">Pinckney</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 18:40:40 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    8.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17170114">Browsing porn in incognito mode isn't nearly as private as you think</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 04:20:03.649125</strong>
+            <strong>Last update at 2018-05-28 04:30:02.907379</strong>
         </div>
     </div>
 </div>
