--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -174,7 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
                                     83 comments &nbsp;•&nbsp;
-                                    314.0 points
+                                    315.0 points
                                 </span>
                             </td>
                         </tr>
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:58:58 &nbsp;•&nbsp;
                                     115 comments &nbsp;•&nbsp;
-                                    279.0 points
+                                    280.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17157540">Mussels test positive for opioids in Seattle's Puget Sound</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bbc.com/news/amp/world-us-canada-44256765">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 20:19:19 &nbsp;•&nbsp;
-                                    120 comments &nbsp;•&nbsp;
-                                    253.0 points
+                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
+                                    138 comments &nbsp;•&nbsp;
+                                    254.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17131941">Foundations of Data Science [pdf]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17157540">Mussels test positive for opioids in Seattle's Puget Sound</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.cs.cornell.edu/jeh/book.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kercker">kercker</a></strong> &nbsp;•&nbsp;
-                                    2018-05-23 07:11:54 &nbsp;•&nbsp;
-                                    21 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.bbc.com/news/amp/world-us-canada-44256765">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 20:19:19 &nbsp;•&nbsp;
+                                    120 comments &nbsp;•&nbsp;
                                     253.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 06:00:03.716522</strong>
+            <strong>Last update at 2018-05-28 06:10:03.127281</strong>
         </div>
     </div>
 </div>
